# komunikator

./: README.md
klient/: CMakeLists.txt
klient/include/: ClientLogic.h  CustomEvents.h  Klient.h  LoginFrame.h  MainFrame.h  Packers.h  RegisterFrame.h
klient/resource/: klientQuery.sql
klient/source/: Klient.cpp
klient/source/logic/: ClientLogic.cpp  CustomEvents.cpp  LoginFrame.cpp  MainFrame.cpp  Packers.cpp  RegisterFrame.cpp
serwer/: CMakeLists.txt
serwer/include/: PackersServer.h  Serwer.h
serwer/resource/: serverDB.db
serwer/source/: main.cpp
serwer/source/logic/: PackersServer.cpp  Serwer.cpp
